get list masters, add master to favorite, delete from favorite
